k8s/deployment.yaml
#@ load("@ytt:data", "data")
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: address-lookup-api
  namespace: #@ data.values.namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: address-lookup-api
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: address-lookup-api
        environment: #@ data.values.environment
        version: #@ data.values.version
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: address-lookup-api
        image: #@ data.values.image
        ports:
        - containerPort: 8080
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
        resources:
          requests:
            cpu: #@ data.values.resources.requests.cpu
          limits:
            cpu: #@ data.values.resources.limits.cpu
      - name: address-lookup-api-mock
        image: #@ data.values.mockimage
        args: ["--configfile", "/imposters/imposters.ejs", "--allowInjection"]
        ports:
        - containerPort: 8090
        resources:
          requests:
            cpu: #@ data.values.resources.requests.cpu
          limits:
            cpu: #@ data.values.resources.limits.cpu
      volumeMounts:
      - mountPath: "/mnt/address-lookup-api"
        name: logs
    volumes:
      - name: logs
        persistentVolumeClaim:
          claimName: application-logs
